[package]
name = "biodbtools"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"                                   #Error handling
reqwest = "0.12.23"                                 #http requests
tokio = { version = "1.47.1", features = ["full"] } #async
indicatif = "0.18.0"                                #progress bars
lazy_static = "1.5.0"                               #Use functions in statics
futures = "0.3.31"
